--- a/package.json
+++ b/package.json
@@ -6,21 +6,35 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build-css": "tailwindcss build -i ./src/styles.css -o ./public/styles.css --watch"
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.3.2",
-    "next": "^13.4.19",
+    "next": "^13.5.6",
+    "rainbowkit": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "~1.19.15",
-    "wagmi": "~1.4.12"
+    "wagmi": "^1.4.1"
+  },
+  "overrides": {
+    "react-scripts": {},
+    "devDependencies": {
+      "@types/node": "^18.18.10",
+      "@types/react": "^18.2.37",
+      "autoprefixer": "^10.4.16",
+      "eslint": "^8.15.0",
+      "eslint-config-next": "^13.4.19",
+      "postcss": "^8.4.32",
+      "tailwindcss": "^3.4.0",
+      "typescript": "^5.0.4"
+    }
   },
   "devDependencies": {
-    "@types/node": "^18.18.10",
-    "@types/react": "^18.2.37",
-    "eslint": "^8.15.0",
-    "eslint-config-next": "^13.4.19",
-    "typescript": "^5.0.4"
+    "@types/react": "18.2.47",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
